--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Image Corrector</title>
+    <title>Portal Template</title>
   </head>
 
   <body>
